--- a/app/src/main/res/layout/activity_fetched_data2.xml
+++ b/app/src/main/res/layout/activity_fetched_data2.xml
@@ -58,20 +58,7 @@
         android:paddingLeft="40dp"
         android:layout_below="@+id/fetchOne"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/chart"
-        android:text="View Trends"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/btnshape"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:paddingRight="40dp"
-        android:paddingLeft="40dp"
-        android:layout_below="@+id/view"
-        />
+
 
 
 
@@ -79,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/disp2"
-        android:layout_below="@id/chart"
+        android:layout_below="@id/view"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
